# QSH

./: .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  config.json  docker-compose.yml  pyproject.toml  repository.json  run.sh
.github/workflows/: build-publish.yml
docs/: QSH-MQTT-Conformance-Schema.md  Valiant setup instructions  install.md  mqtt-forecast-publisher.md  privacy.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  test-setup.ts
frontend/src/__mocks__/: mockLiveWebSocket.ts
frontend/src/__tests__/: App.render.test.tsx  App.setup-mode-routing.test.tsx  BuildingLayout.test.tsx  test-setup.storage.test.ts  useEnvelope.test.ts
frontend/src/components/: AntifrostThreshold.tsx  Building3DView.tsx  CapacityBar.tsx  ComfortControl.tsx  EngineeringBar.tsx  EntityValue.tsx  FlowLimits.tsx  HardwareTelemetry.tsx  HelpTip.tsx  InfrastructureCard.tsx  Layout.tsx  MultiRoomTempChart.tsx  OccupancyTimeline.tsx  OperatingStateTimeline.tsx  ReconnectingOverlay.tsx  RecoveryCard.tsx  RoomCard.tsx  RoomDetail.tsx  Sidebar.tsx  SourceSelector.tsx  StatusBanner.tsx  SystemHealth.tsx  TodaySummary.tsx  TrendChart.tsx
frontend/src/hooks/: LiveProvider.tsx  entityMap.ts  liveContext.ts  useAlarms.ts  useApoptosis.ts  useAway.ts  useBalancing.ts  useBuildingLayout.ts  useComfortSchedule.ts  useConfig.ts  useCutoverGates.ts  useDeviceHealth.ts  useEntityResolve.ts  useEntityScan.ts  useEnvelope.ts  useExternalSetpoints.ts  useFallbackCounts.ts  useFeatureFlags.ts  useHistorian.ts  useHistory.ts  useLive.ts  (+19 more)
qsh/: SO_MANIFEST.sha256  __init__.py  __main__.py
qsh/api/: __init__.py  cutover_gate_tracker.py  heat_source_validation.py  history.py  secrets_paths.py  server.py  snapshots.py  state.py  trends.py  ttc.py  ws.py
qsh/drivers/: __init__.py  ha_driver.py  hot_water_payloads.py  resolve.py  source_routing.py
qsh/forecast/: __init__.py
qsh/occupancy/: __init__.py
qsh/pipeline/: __init__.py
qsh/projection/: __init__.py
qsh/swarm/: __init__.py
qsh/tariff/: __init__.py
scripts/release/: check_import_integrity.py  check_public_image_imports.py  test_check_import_integrity.py  test_check_public_image_imports.py
(+311 files in other folders)
